--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,12 +9,9 @@ branches:
 build: off  # будем использовать свой скрипт сборки
 
 install:
-
-  - ps: $App = Start-Process -FilePath java -ArgumentList "-jar ./artifacts/app-card-delivery.jar" -PassThru
+  # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
+  - java -jar ./artifacts/app-card-delivery.jar &
 
 build_script:
-  - ps:  chmod +x gradlew
-  - ps: ./gradlew test --info "-Dselenide.headless=true"
-
-on_finish:
-  - ps: Stop-Process -Id $App.Id
+  - chmod +x gradlew
+  - ./gradlew test --info "-Dselenide.headless=true"  # запускаем тест, флаг --info позволяет выводить больше информации
